<resources>
    <string name="app_name">极录</string>
    <string name="app_name_en">A-READ</string>
    <string name="inputPhone">请输入手机号码</string>
    <string name="guanguang">其实，我只是想逛逛</string>
    <string name="yinsi">进入应用将代表您 同意极录服务及隐私条款</string>
    <string name="go">走你</string>
    <string name="errorPhone">亲，你是不是乱写的号码</string>
    <string name="netRun">网络快飞~~</string>
    <string name="inputVerCode">请输入验证码</string>
    <string name="life">生活这么美，你都干了啥...</string>
    <string name="up_cancle">上滑取消</string>
    <string name="talk">领导，随便说两句</string>
    <string name="draver_open">open</string>
    <string name="draver_close">close</string>
    <string name="wenzi">发文字</string>
    <string name="tupian">发图片</string>
    <string name="shipin">小视频</string>
    <string name="luyin">极录音</string>
    <string name="back">返回</string>
    <string name="save">保存</string>
    <string name="welcome">公告：欢迎光临极录APP，点击下方按钮，开始你的即刻录制吧！</string>
    <string name="sign">人无远虑，必有近忧</string>
</resources>
